--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -141,7 +141,8 @@
         "subtotal": "Subtotal",
         "shipping_at_checkout": "Shipping & taxes calculated at checkout",
         "update": "Update Cart",
-        "checkout": "Check Out",
+        "view_cart": "View cart",
+        "checkout": "Proceed to checkout",
         "empty": "Your cart is currently empty.",
         "cookies_required": "Enable cookies to use the shopping cart",
         "continue_shopping": "Continue shopping",
